llvm/dev/method1.llvm.bc.err
/usr/lib/llvm-3.8/bin/llvm-as: llvm/dev/method1.llvm:14:1: error: expected instruction opcode
}
^
